# spacemonger

./: .gitattributes  .gitignore  BACKLOG.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  DiskUsage.cpp  DiskUsage.h  DriveDialog.cpp  FolderEntryArrays.cpp  FolderEntryArrays.h  FolderTree.cpp  FolderTree.h  FolderView.cpp  FolderView.h  PathUtil.cpp  PathUtil.h  README.TXT  SpaceMonger.cpp  SpaceMonger.rc  StringArena.h  TipWnd.cpp  diff.txt
.github/workflows/: build.yml
legacy/: SpaceMonger.dsp
tests/: DiskUsage_test.cpp  FolderEntryArrays_test.cpp  PathUtil_test.cpp  StringArena_test.cpp
